# malicious-logger

./: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  readme.md
src/malicious_logger/: config.py  exceptions.py
src/malicious_logger/database/: models.py
src/malicious_logger/database/migrations/: env.py
src/malicious_logger/database/migrations/versions/: 03cd2a69bb48_initial_schema.py
src/malicious_logger/fetchers/: __init__.py  alienvault.py  base.py  openphish.py  urlhaus.py
src/malicious_logger/parsers/: alienvault.py  models.py  openphish.py  urlhaus.py
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/: test_fetchers.py
