[project]
name = "malicious-logger"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "click>=8.4.2",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "testcontainers[postgres]>=4.14.2",
]

[tool.pyright]
typeCheckingMode = "off"
reportUnusedVariable = "none"
